--- a/.github/workflows/create-cluster.yml
+++ b/.github/workflows/create-cluster.yml
@@ -12,6 +12,14 @@ on:
       cluster-info:
         description: 'Get Cluster Info'
         type: boolean
+      sleep-action:
+        description: 'Sleep Action'
+        type: boolean
+      sleep-time:
+        description: 'Sleep time in seconds'
+        type: string
+        required: false
+        default: '300'
       install-frp:
         description: 'Install frp'
         type: boolean
@@ -43,6 +51,10 @@ jobs:
     - name: Cluster Info
       if: ${{ inputs.cluster-info }}
       run: ansible-playbook cluster-info.yml
+
+    - name: Sleep Action
+      if: ${{ inputs.sleep-action }}
+      run: sleep ${{ inputs.sleep-time }}
 
     - name: Cluster Config
       if: ${{ inputs.install-frp }}
